normalize.css removed from the project

--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,13 @@
-@import 'normalize.css';
+body, h1, h2, h3, p, li, ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
