--- a/src/Btn.css
+++ b/src/Btn.css
@@ -11,9 +11,25 @@ url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swa
   font-family: 'Inter', sans-serif;
   font-weight: 300;
   margin: 10px 0px;
-  transition: .4s ease;
+  transition: .4s ease-in-out;
 }
 
 .btn:hover {
-  background-color:  rgba(16, 121, 16, .6);
+  background: url('./img/svg/logo-icon.svg');
+  background-color:  rgba(16, 121, 16, .2);
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0px 1px 4px rgba(16, 121, 16, .6);
+  color: #ffffff;
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
 }
+
+/* .btn::after {
+  content: '';
+  width: 75px;
+  height: 85px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+} */
