--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -7,9 +7,9 @@
 }
 
 .bg-landpage {
-  background: linear-gradient(to left, rgba(230,230,230,.2) 20%, rgba(230,230,230,1) 50%, rgba(230,230,230,.2) 80%);
+  background: linear-gradient(to left, rgba(255,255,255,1) 20%, rgba(230,230,230,1) 50%, rgba(255,255,255,1) 80%);
   padding-top: 40px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, .25);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, .25);
 }
 
 /* titles */
@@ -85,7 +85,7 @@
 
 .landpage-gato p {
   flex: 1;
-  width: 190px;
+  width: 170px;
   color: #4E4E4E;
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
