--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,9 @@
 .bg-navbar {
   width: 100%;
   height: 60px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, .25);
+  margin-bottom: 1px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, .3);
+  z-index: 3;
 }
 
 .container-navbar {
