--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -9,7 +9,7 @@
 .bg-landpage {
   background: linear-gradient(to left, rgba(255,255,255,1) 20%, rgba(230,230,230,1) 50%, rgba(255,255,255,1) 80%);
   padding-top: 40px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, .25);
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, .15);
 }
 
 /* pseudo quotes */
@@ -46,6 +46,11 @@
 }
 
 .enfase {
+  color: #25AD25;
+}
+
+.enfase-quote {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   color: #25AD25;
 }
 
