animations and responsivity started

--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -93,3 +93,9 @@
 .landpage-gato button {
   margin-left: 60px;
 }
+
+@media(min-width: 1240px) {
+  .container-landpage {
+    width: 1240px;
+  }
+}
