--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,8 @@
 @import
 url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
 
+@import '../src/script/simple-anime.css';
+
 * {
   font-family: 'Inter', sans-serif;
 }
@@ -60,5 +62,5 @@ a {
 /* Img reset */
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
 }
