--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,6 @@
 .bg-navbar {
   width: 100%;
-  height: 60px;
+  /* height: 3vw; */
   margin: 0 auto 1px auto;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .15);
   z-index: 3;
@@ -9,61 +9,52 @@
 .container-navbar {
   display: flex;
   margin: 0 auto;
-  width: 960px;
-  height: 60px;
+  /* width: 960px; */
+  /* height: 60px; */
+  padding: 20px 0;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
 
 .logo {
+  max-width: 200px;
+}
+
+.logo img {
   display: block;
-  width: 220px;
+  width: 100%;
   margin-left: 36px;
   transition: .2s ease-in-out;
+  object-fit: cover;
+  object-position: center;
 }
 
 .logo:hover {
   opacity: .7;
 }
 
-.navbar-menu ul {
+.navbar-menu {
   display: flex;
-  margin-right: 36px;
+  margin-right: 20px;
+  flex-wrap: wrap;
 }
 
-.navbar-menu ul li a {
+.navbar-menu li a {
   padding: 12px 16px;
   border-radius: 4px;
-  /* transition: background .3s ease-in; */
   position: relative;
-  /* transform: rotate(180deg); */
 }
 
-.navbar-menu ul li {
+.navbar-menu li {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 12px;
-  /* margin-left: 2rem; */
+  margin-right: 6px;
   text-transform: uppercase;
-  /* transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1); */
 }
 
-
-
-/* .navbar-menu ul li::before {
-  content: '';
-  width: 2px;
-  height: 26px;
-  background-image: url('./img/svg/navbar-sep.svg');
-  position: absolute;
-  top: -6px;
-} */
-
-/* .navbar-menu ul li:first-child::before {
-  content: none;
-} */
-
-.navbar-menu ul li a:hover {
+.navbar-menu li a:hover {
   color: #107910;
 }
 
@@ -103,3 +94,17 @@
   border-color: #107910;
 }
 
+@media (min-width: 1240px) {
+  .bg-navbar {
+    /* height: 80px; */
+  }
+  .container-navbar {
+    width: 1240px;
+  }
+  .logo {
+    max-width: 260px;
+  }
+  .navbar-menu li {
+    font-size: 14px;
+  }
+}
