--- a/src/Avaliacao.css
+++ b/src/Avaliacao.css
@@ -110,7 +110,7 @@
 
 .lado-direito.subgrid-avaliacao p {
   grid-column: 1 / 3;
-  justify-self: start;
+  justify-self: center;
 }
 
 .lado-direito.subgrid-avaliacao h3 {
