--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,16 +1,15 @@
 .bg-navbar {
   width: 100%;
-  /* height: 3vw; */
-  margin: 0 auto 1px auto;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, .15);
+  margin: 0 auto;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, .15);
   z-index: 3;
+  position: fixed;
+  background-color: #ffffff;
 }
 
 .container-navbar {
   display: flex;
   margin: 0 auto;
-  /* width: 960px; */
-  /* height: 60px; */
   padding: 20px 0;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -95,9 +94,6 @@
 }
 
 @media (min-width: 1240px) {
-  .bg-navbar {
-    /* height: 80px; */
-  }
   .container-navbar {
     width: 1240px;
   }
