--- a/src/Flexibilidade.css
+++ b/src/Flexibilidade.css
@@ -1,19 +1,19 @@
 .container-flexibilidade {
-  width: 960px;
+  width: 60rem;
   margin: 0 auto;
 }
 
 .intro-flexibilidade {
-  margin: 40px auto 0 auto;
+  margin: 2.5rem auto 0 auto;
   color: #676767;
-  max-width: 700px;
+  max-width: 43.75rem;
 }
 
 .grid-flexibilidade {
-  margin-top: 40px;
+  margin-top: 2.5rem;
   display: grid;
-  grid-template-columns: 360px 360px;
-  gap: 30px 0;
+  grid-template-columns: 22.5rem 22.5rem;
+  gap: 1.875rem 0;
   justify-content: center;
 }
 
@@ -31,45 +31,45 @@
 }
 
 .plano-desc h2 {
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 
 .quote-flexibilidade {
-  margin: 10px auto 0 auto;
-  font-size: 10px;
+  margin: 0.625rem auto 0 auto;
+  font-size: 0.625rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
   color: #4E4E4E;
-  max-width: 300px;
+  max-width: 18.75rem;
   position: relative;
-  line-height: 13px;
+  line-height: 0.813rem;
   letter-spacing: .02rem;
 }
 .quote-flexibilidade::before,
 .quote-flexibilidade::after {
   content: '';
-  width: 150px;
-  height: 1px;
-  background: url('./img/svg/pseudoquote-dec.svg');
+  width: 9.375rem;
+  height: 0.063rem;
+  background: linear-gradient(90deg, rgba(0, 255, 0, 0) 0%, #00FF00 51.35%, rgba(0, 255, 0, 0) 100%);
   position: absolute;
 }
 
 .quote-flexibilidade::before {
-  top: -10px;
-  left: 80px;
+  top: -0.625rem;
+  left: 5rem;
 }
 
 .quote-flexibilidade::after {
-  top: 46px;
-  left: 20px;
+  top: 2.875rem;
+  left: 1.25rem;
 }
 
 .text-call-flexibilidade {
   align-self: end;
   text-align: center;
-  font-size: 12px;
-  margin-top: 10px;
-  color: #364E34;
+  font-size: 0.75rem;
+  margin-top: 0.625rem;
+  color: #4E4E4E;
 }
 
 .plano-desc button {
@@ -90,17 +90,17 @@
   color: #ffffff;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 1.125rem;
   position: absolute;
   width: 100%;
-  height: 0px;
-  top: 171px;
-  left: 0px;
+  height: 0rem;
+  top: 10.688rem;
+  left: 0rem;
   text-align: center;
   padding-bottom: 40px;
   padding-top: 20px;
   background: rgba(0, 0, 0, 0.5);
-  border-radius: 0px 0px 6px 0px;
+  border-radius: 0rem 0rem 0.375rem 0rem;
 }
 
 .campo-img.config-img::before {
@@ -111,13 +111,52 @@
 }
 
 .outros-planos {
-  margin: 20px auto 40px auto;
-  max-width: 400px;
+  margin: 1.25rem auto 2.5rem auto;
+  max-width: 25rem;
   text-align: center;
-  font-size: 10px;
+  font-size: 0.625rem;
   color: #4E4E4E;
 }
 
 .custom-link:hover {
   text-decoration: underline;
+}
+
+@media (min-width: 1240px) {
+  .intro-flexibilidade {
+    max-width: 77.5rem;
+    font-size: 1.3rem;
+    margin: 3.75rem auto 3.75rem auto;
+  }
+  .grid-flexibilidade {
+    grid-template-columns: 28.75rem 28.75rem;
+  }
+  .quote-flexibilidade {
+    font-size: 0.9rem;
+    line-height: 1rem;
+    letter-spacing: 0;
+    max-width: 25rem;
+  }
+  .quote-flexibilidade::after,
+  .quote-flexibilidade::before  {
+    height: 0.031rem;
+  }
+  .quote-flexibilidade::before {
+    top: -0.8rem;
+    left: 9.5rem;
+  }
+  .quote-flexibilidade::after {
+    top: 4.2rem;
+    left: 2rem;
+  }
+  .text-call-flexibilidade {
+    font-size: 0.8rem;
+  }
+  .config-img::before {
+    top: 14.75rem;
+  }
+  .outros-planos {
+    font-size: 0.75rem;
+    max-width: 28rem;
+  }
 }
