--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -20,13 +20,13 @@
   font-style: italic;
   font-weight: 400;
   width: 26.25rem;
-  color: #4E4E4E;
+  color: #737272;
   margin: 0 auto;
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
   position: relative;
   padding: 1.875rem;
-  background: radial-gradient(80% 60% at 50% 50%, rgba(222, 255, 216, 0.3) 0%, rgba(217, 217, 217, 0) 100%);
+  background: radial-gradient(80% 60% at 50% 50%, rgba(222, 255, 216, 0.2) 0%, rgba(217, 217, 217, 0) 100%);
 }
 
 .pseudoquote-landpage::after,
