--- a/src/script/simple-anime.css
+++ b/src/script/simple-anime.css
@@ -11,11 +11,29 @@
 .fadeInLeft {
   transform: translate3d(-20px, 0, 0);
 }
-[data-anime] {
+/* [data-anime] {
   opacity: 0;
-}
+} */
 .anime {
   opacity: 1;
   transform: none;
   transition: transform 0.8s, opacity 0.8s ease-in-out;
 }
+
+[data-anime="scroll"] {
+  opacity: 0;
+  /* transform: translate3d(-30px, 0, 0);
+  transition: 0.3s; */
+}
+
+[data-anime="scroll"].ativo {
+  opacity: 1;
+  /* transform: none; */
+  transition: transform 0.8s, opacity 0.8s ease-in-out;
+  transform: translate3d(0, 0, 0);
+}
+
+/* [data-anime="scroll"].ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+} */
