--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,3 +1,7 @@
+html {
+  margin-top: 60px;
+}
+
 .bg-navbar {
   width: 100%;
   margin: 0 auto;
@@ -5,6 +9,7 @@
   z-index: 3;
   position: fixed;
   background-color: #ffffff;
+  top: 0px;
 }
 
 .container-navbar {
