--- a/src/global/HeaderTitle.css
+++ b/src/global/HeaderTitle.css
@@ -4,13 +4,13 @@
 /* titles */
 .title {
   font-family: 'Arsenal', sans-serif;;
-  color: #107910;
+  /* color: #107910; */
   position: relative;
   cursor: context-menu;
 }
 
 .title::before {
-  content: '__';
+  content: var(--content);
   color: transparent;
   background: url('../img/svg/titulo-dec.svg');
   background-position: left bottom;
