--- a/src/info/Info.css
+++ b/src/info/Info.css
@@ -3,6 +3,15 @@
   margin: 0 auto;
 }
 
+.info-intro-bg {
+  height: 280px;
+  max-width: 1600px;
+  border-radius: 4px;
+  background-color: #224528;
+  padding-top: 3rem;
+  margin: 120px auto 140px auto;
+}
+
 .grid-rastreio {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -52,12 +61,31 @@
 .info-grid-introplano {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 0px 10px;
   max-width: 960px;
   margin: 0 auto;
 }
 
 .info-grid-introplano img {
   width: 100%;
+  box-shadow: 1px 1px 4px #303030;
+  border-radius: 6px;
+}
+
+.info-introplano-text {
+  font-size: 20px;
+  color: #676767;
+  text-align: center;
+  max-width: 960px;
+  margin: 0px auto 80px auto;
+}
+
+.info-plano-bg {
+  max-width: 1600px;
+  margin: 0 auto;
+  border-radius: 4px;
+  background-color: #224528;
+  box-shadow: inset 0px 120px  #ffffff, inset 0px -160px #ffffff;
 }
 
 .info-plano-intro {
@@ -80,12 +108,51 @@
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   margin: 40px auto;
+  max-width: 960px;
+  gap: 0 24px;
 }
 
 .info-plano-subgrid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px 0;
+  gap: 32px 0;
+  padding: 40px 40px 20px 40px;
+  background: linear-gradient(180deg, rgba(237, 236, 236, 0.77) 0.01%, rgba(213, 213, 213, 0.7) 0.02%, rgba(225, 225, 225, 0.5) 0.03%, #FFFFFF 48.75%, rgba(255, 255, 255, 0.4) 100%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  justify-items: center;
+}
+
+.info-plano-premium.info-plano-subgrid h3 {
+text-shadow: 0px 0px 1px black;
+}
+
+.info-plano-premium.info-plano-subgrid {
+  background: linear-gradient(180deg, rgba(16, 121, 16, 0.7) 0%, rgba(47, 74, 47, 0.035) 50.83%, rgba(16, 121, 16, 0.357) 99.99%, rgba(16, 121, 16, 0.7) 100%);
+}
+
+.info-plano-premium.info-plano-subgrid ul li {
+  color: #f4f4f4;
+}
+
+.info-plano-premium.info-plano-subgrid ul li::before {
+  background-color: #00CA00;
+}
+
+.info-plano-premium.info-plano-subgrid h4 {
+  color: #ffffff;
+}
+
+.info-plano-subgrid div {
+  width: 280px;
+}
+
+.info-plano-subgrid:first-child {
+  justify-self: end;
+}
+
+.info-plano-subgrid:last-child {
+justify-self: start;
 }
 
 .info-plano-subgrid h4 {
@@ -93,14 +160,15 @@
   font-size: 22px;
   font-weight: bold;
   color: #107910;
-  margin-bottom: 10px;
+  margin: 16px 0;
 }
 
 .info-plano-subgrid ul li {
   color: #676767;
   font-size: 16px;
-  margin: 6px 0;
+  margin: 12px 0;
   position: relative;
+  justify-self: start;
 }
 
 .info-plano-subgrid ul li::before {
@@ -119,12 +187,82 @@ position: absolute;
   color: #303030;
   font-weight: bold;
   text-align: center;
+  position: relative;
+}
+
+.info-plano-subgrid p::after {
+  content: '';
+  background: url('../img/svg/btn-dec.svg');
+  background-repeat: no-repeat;
+  background-position: cover;
+  position: absolute;
+  width: 75px;
+  height: 85px;
+  top: 50%;
+  left: 80%;
+  z-index: 0;
 }
 
 .info-plano-subgrid sup {
   font-size: 26px;
   color: #107910;
   font-weight: bold;
+}
+
+.info-internalgrid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.info-internalgrid button {
+  justify-self: center;
+}
+
+.info-pre-porque {
+  width: 960px;
+  margin: 60px auto 3px auto;
+  text-align: center;
+  font-size: 20px;
+  color: #676767;
+}
+
+.info-porque-bg {
+  background: #053105;
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto 40px auto;
+  border-radius: 40px;
+  height: 160px;
+  box-shadow: inset 30px 36px  #ffffff, inset -30px -36px #ffffff;
+  /* Fix for border radius ghost */
+  outline: 0.3rem solid #ffffff;
+  outline-offset: -0.05rem;
+  transition: 0.6s ease;
+}
+
+.info-porque-bg:hover {
+height: 280px;
+}
+
+.info-porque {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.info-hide {
+  visibility: hidden;
+  opacity: 0;
+  width: 960px;
+  margin: 0 auto;
+  cursor: context-menu;
+  transition: visibility 0s, opacity 0.5s ease-in-out;
+}
+
+.info-porque-bg:hover .info-hide {
+  visibility: visible;
+  opacity: 1;
+  font-size: 20px;
+  color: #D8D8D8;
 }
 
 @media (min-width: 1240px) {
@@ -136,6 +274,9 @@ position: absolute;
     left: 6px;
   }
   .info-grid-introplano {
-    max-width: 1240px;
+    max-width: 1080px;
+  }
+  .info-introplano-text {
+    margin: 180px auto 120px auto;
   }
 }
