finished navbar and landpage in mobile layout

--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,12 @@ body {
   overflow-y: overlay;
 }
 
+/* MOBILE SCROLLBAR */
+body {
+  /* overflow: hidden; */
+}
+
+
 /* Margem e padding reset */
 body, h1, h2, h3, h4, h5, p, li, ul {
   margin: 0;
