--- a/src/mobile/NavbarMobile.css
+++ b/src/mobile/NavbarMobile.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 480px) {
   .container-navbar {
     display: block;
     width: 100vw;
@@ -8,7 +8,8 @@
     margin: 0 auto;
   }
   .logo img {
-    margin: 0;
+    width: 160px;
+    margin: 0 auto;
   }
   .navbar-menu {
     display: flex;
@@ -16,27 +17,38 @@
     padding: 0px 0 0 0;
     margin: 0 0 0 0;
   }
+  .navbar-menu::before {
+    content: '';
+    color: #ffffff;
+    background-color: rgba(250, 250, 250, 0.7);
+    font-size: 20px;
+    position: absolute;
+    top: 60px;
+    left: 0%;
+    width: 60vw;
+    height: 100vh;
+  }
   .navbar-menu li {
     margin: 0px;
   }
   .navbar-menu li a {
     padding: 16px 20px;
     transition: 0.1s ease;
-    width: 140px;
+    max-width: 60vw;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 0;
     text-align: center;
     position: relative;
-    padding: 18px 10px;
+    padding: 18px 0;
     font-size: 10px;
     display: block;
     background-color: #ffffff;
-    /* margin-top: 1px; */
+    /* margin-top: 2px; */
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   }
 
   .navbar-menu li a:hover {
-    background-color: rgba(0, 150, 0, 1);
+    background-color: rgba(0, 0, 0, 0.7);
     color: #ffffff;
   }
   .navbar-menu li a::before, .navbar-menu li a::after {
@@ -48,21 +60,23 @@
     left: 1%;
   }
   .menu.menuOpen {
-    max-width: 300px;
-    max-height: 300px;
+    width: 60vw;
+    height: 100vh;
     position: absolute;
     top: 10%;
     left: -5px;
-    background: rgba(16, 121, 16, 1);
+    /* background: linear-gradient(180deg, #107910 0%, #107910 15.42%, rgba(16, 121, 16, 0) 15.43%, rgba(16, 121, 16, 0.28) 15.44%, rgba(16, 121, 16, 0.14) 100%); */
+    background: linear-gradient(180deg, #107910 0%, rgba(16, 121, 16, 0) 100%);
+    /* background: rgba(16, 121, 16, 1); */
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
     box-shadow: 1px -10px 100px black;
-    border-radius: 0;
+    border-radius: 0 0 10px 10px;
     padding: 60px 0px 0px 0px;
   }
   .icon {
     position: absolute;
     z-index: 4;
-    top: 16px;
+    top: 12px;
     left: 1%;
     width: 44px;
     height: 44px;
@@ -70,7 +84,7 @@
     transition: 0.3s ease;
   }
   .hamburguer {
-    width: 22px;
+    width: 18px;
     height: 4px;
     border-radius: 4px;
     position: absolute;
@@ -82,7 +96,7 @@
   }
   .hamburguer::before {
     content: '';
-    width: 30px;
+    width: 24px;
     height: 4px;
     border-radius: 4px;
     position: absolute;
@@ -93,7 +107,7 @@
   }
   .hamburguer::after {
     content: '';
-    width: 30px;
+    width: 24px;
     height: 4px;
     border-radius: 4px;
     position: absolute;
@@ -103,7 +117,7 @@
     transition: 0.5s ease;
   }
   .icon.iconActive {
-    left: 100px;
+    left: 40vw;
     top: 10px;
   }
   .icon.iconActive::before {
@@ -112,7 +126,7 @@
     font-size: 20px;
     position: absolute;
     top: 20%;
-    left: -190%;
+    left: -210%;
     width: 100%;
     height: 16px;
   }
