--- a/src/mobile/FlexibilidadeMobile.css
+++ b/src/mobile/FlexibilidadeMobile.css
@@ -8,6 +8,7 @@
     font-size: 12px;
     text-align: center;
     margin: 20px auto 0 auto;
+    padding: 0 20px;
   }
   .skip-mobile {
     display: none;
