--- a/src/mobile/FlexibilidadeMobile.css
+++ b/src/mobile/FlexibilidadeMobile.css
@@ -27,23 +27,28 @@
     border-radius: 10px 10px 0 0;
   }
   .bg-domestico, .bg-campo {
-    background: linear-gradient(180deg, rgba(16, 120, 16, .4) 0%, rgba(16, 121, 16, 0.1) 20%, rgba(16, 121, 16, 0.1) 70%, rgba(16, 121, 16, 0) 80%);
+    background: linear-gradient(180deg, rgba(16, 120, 16, .4) 0%, rgba(16, 121, 16, 0.1) 30%, rgba(16, 121, 16, 0.1) 70%, rgba(16, 121, 16, 0.08) 80%, rgba(16, 121, 16, 0) 100%);
   }
   .config-img::before {
     display: none;
   }
   .quote-flexibilidade {
     margin: 40px auto 40px auto;
-    width: 272px;
+    max-width: 320px;
+    padding: 0 20px;
   }
   .text-call-flexibilidade {
     font-size: 0.65rem;
+  }
+  .plano-desc {
+    padding: 0 0 20px 0 ;
   }
   .plano-desc button {
     padding: 12px 10px !important;
   }
   .outros-planos {
     margin: 1.25rem auto 4rem auto;
-    max-width: 18rem;
+    max-width: 20rem;
+    padding: 0 20px;
   }
 }
