--- a/src/mobile/LandPageMobile.css
+++ b/src/mobile/LandPageMobile.css
@@ -2,16 +2,17 @@
 
   .bg-landpage {
     padding-top: 1px;
-    background: linear-gradient(179.59deg, rgba(217, 217, 217, 0) 64.78%, rgba(16, 121, 16, 0.23) 99.65%);
+    /* background: linear-gradient(179.59deg, rgba(217, 217, 217, 0) 64.78%, rgba(16, 121, 16, 0.23) 99.65%); */
   }
   .container-landpage {
-    max-width: 320px;
+    max-width: 100%;
     width: auto;
+    /* padding: 0 20px; */
     margin: 40px auto 0 auto;
   }
   .pseudoquote-landpage {
     font-size: 14px;
-    margin: 80px auto;
+    margin: 60px auto 0 auto;
     max-width: 100%;
     width: auto;
     padding: 30px 20px;
@@ -25,16 +26,53 @@
     height: 0.062rem;
     left: 2.75rem;
   }
-  .landpage-gato div {
+  .landpage-gato {
     display: grid;
+  }
+  .landpage-gato div {
+    display: none;
     grid-template-columns: 1fr;
     gap: 10px 0;
+    padding: 20px 0;
   }
-  .landpage-gato img, .landpage-gato::before {
-    display: none;
+  .landpage-gato img {
+    max-width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    grid-row: 2;
+    /* padding: 0 10px; */
+    object-fit: cover;
+    object-position: center;
+  }
+  .landpage-gato::before {
+    top: 4rem;
+  }
+.landpage-gato::after {
+    content: "﹀";
+    font-size: 36px;
+    text-align: center;
+    position: absolute;
+    color: #ffffff;
+    height: 26px;
+    width: 34px;
+    top: 85%;
+    left: 45%;
+    /* opacity: 90%; */
+    z-index: 2;
+    animation: downArrow 2s infinite alternate;
+  }
+  
+  @keyframes downArrow {
+    from {
+      transform:translate3d(0,-10px,0);
+    }
+    to {
+      transform:translate3d(0,-20px,0);
+    }
   }
   .landpage-gato p {
     text-align: center;
+    margin: 0 auto;
     width: 16rem;
   }
   .landpage-gato button {
