mobile info page finished v1

--- a/src/global/Banner.css
+++ b/src/global/Banner.css
@@ -31,3 +31,13 @@
     width: 1240px;
   }
 }
+
+@media (max-width: 480px) {
+  .bg-banner{
+    opacity: .95;
+  }
+  .banner img {
+    height: 200px;
+    object-fit: cover;
+  }
+}
