--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@ url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swa
   }
 }
 body {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   overflow-y: overlay;
 }
 
