--- a/src/info/InfoMobile.css
+++ b/src/info/InfoMobile.css
@@ -107,10 +107,17 @@
   .info-plano-premium.info-plano-subgrid ul li {
     color: rgba(220, 220, 220, 1);
   }
+  .colorcampo {
+    background-color: rgba(80, 50, 30, .9) !important;
+  }
+  .camposection.info-plano-premium.info-plano-subgrid {
+    background: linear-gradient(180deg, rgba(80, 50, 30, 1) 0%, rgba(55, 32, 20, 0.6) 50%, rgba(80, 50, 30, 0.2) 99.99%);
+  }
   .camposection.info-plano-premium.info-plano-subgrid h3 {
     border-bottom: 1px solid rgba(120, 70, 30, .3);
     padding-bottom: 16px;
   }
+  
   .info-pre-porque {
     max-width: 420px;
     width: auto;
