--- a/src/mobile/NavbarMobile.css
+++ b/src/mobile/NavbarMobile.css
@@ -20,29 +20,31 @@
   .navbar-menu::before {
     content: '';
     color: #ffffff;
-    background-color: rgba(250, 250, 250, 0.7);
+    background-color: rgba(250, 250, 250, 0.2);
     font-size: 20px;
     position: absolute;
     top: 60px;
     left: 0%;
     width: 60vw;
-    height: 100vh;
+    /* height: 100vh; */
   }
   .navbar-menu li {
     margin: 0px;
   }
   .navbar-menu li a {
-    padding: 16px 20px;
+    /* padding: 16px 20px; */
     transition: 0.1s ease;
     max-width: 60vw;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(80, 80, 80, .3);
     border-radius: 0;
-    text-align: center;
+    /* text-align: center; */
+    text-transform: capitalize;
     position: relative;
-    padding: 18px 0;
+    padding: 18px 10px;
     font-size: 10px;
     display: block;
-    background-color: #ffffff;
+    color: rgba(250, 250, 250, 0.7);
+    background-color: rgba(34, 34, 34, 1);
     /* margin-top: 2px; */
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   }
@@ -61,14 +63,15 @@
   }
   .menu.menuOpen {
     width: 60vw;
-    height: 100vh;
+    /* height: 100vh; */
     position: absolute;
     top: 10%;
     left: -5px;
     /* background: linear-gradient(180deg, #107910 0%, #107910 15.42%, rgba(16, 121, 16, 0) 15.43%, rgba(16, 121, 16, 0.28) 15.44%, rgba(16, 121, 16, 0.14) 100%); */
-    background: linear-gradient(180deg, #107910 0%, rgba(16, 121, 16, 0) 100%);
+    /* background: linear-gradient(180deg, #222222 0%, rgba(34, 34, 34, 0) 100%); */
+    background: rgba(34,34,34, 1);
     /* background: rgba(16, 121, 16, 1); */
-    /* border: 1px solid rgba(0, 0, 0, 0.2); */
+    /* border: 1px solid rgba(80, 80, 80, 0.6); */
     box-shadow: 1px -10px 100px black;
     border-radius: 0 0 10px 10px;
     padding: 60px 0px 0px 0px;
