--- a/src/mobile/NavbarMobile.css
+++ b/src/mobile/NavbarMobile.css
@@ -63,7 +63,7 @@
   }
   .menu.menuOpen {
     width: 60vw;
-    /* height: 100vh; */
+    height: 100vh;
     position: absolute;
     top: 10%;
     left: -5px;
