some minor banner changes

--- a/front-end/public/style.css
+++ b/front-end/public/style.css
@@ -1,5 +1,4 @@
-@import
-url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
 
 @import '../src/script/simple-anime.css';
 
@@ -8,7 +7,7 @@ url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swa
 }
 
 /* CHROME SUPPORT */
-::-webkit-scrollbar { 
+::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -18,18 +17,18 @@ url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swa
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(16,126,16,.7);
+  background: rgba(16, 126, 16, 0.7);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(0,0,0,.7);
+  background: rgba(0, 0, 0, 0.7);
 }
 
 /* FIREFOX SUPPORT */
 @supports (scrollbar-color: red blue) {
   * {
-    scrollbar-color: rgba(16,126,16,.7) transparent;
+    scrollbar-color: rgba(16, 126, 16, 0.7) transparent;
     scrollbar-width: thin;
   }
 }
@@ -39,20 +38,31 @@ body {
 }
 
 /* MOBILE SCROLLBAR */
-body {
-  /* overflow: hidden; */
-}
-
+/* body {
+  overflow: hidden;
+} */
 
 /* Margem e padding reset */
-body, h1, h2, h3, h4, h5, p, li, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+li,
+ul {
   margin: 0;
   padding: 0;
 }
 /* Titulos reset */
-h1, h2, h3, h4, h5 {
-font-size: 1rem;
-font-weight: 400;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 /* lista reset */
@@ -72,19 +82,19 @@ img {
 }
 
 .enfase {
-  color: #25AD25;
+  color: #25ad25;
 }
 
 .enfase-quote {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  color: #25AD25;
+  color: #25ad25;
 }
 
 .enfase-campo {
-  color: #AB6D43;
+  color: #ab6d43;
 }
 
 .enfase-campo-quote {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  color: #AB6D43;
+  color: #ab6d43;
 }
