--- a/front-end/src/global/Banner.css
+++ b/front-end/src/global/Banner.css
@@ -1,8 +1,13 @@
 .bg-banner {
-  margin-top: 11px;
-  background: radial-gradient(100% 1947.29% at 0% 50.18%, rgba(255, 255, 255, 1) 2%, rgba(0, 0, 0, 0.5) 20%, rgba(0, 0, 0, 0.5) 80%, rgba(255, 255, 255, 1) 99%);
+  background: radial-gradient(
+    100% 1947.29% at 0% 50.18%,
+    rgba(255, 255, 255, 1) 2%,
+    rgba(0, 0, 0, 0.5) 20%,
+    rgba(0, 0, 0, 0.5) 80%,
+    rgba(255, 255, 255, 1) 99%
+  );
   max-width: 1800px;
-  margin: 0 auto;
+  margin: 26px auto;
 }
 
 .banner {
@@ -17,7 +22,7 @@
   width: 100%;
   padding: 16px 0;
   text-transform: uppercase;
-  background: rgba(0, 0, 0, 0.5) ;
+  background: rgba(0, 0, 0, 0.5);
   text-align: center;
   grid-row: 1;
   grid-column: 1;
@@ -33,8 +38,8 @@
 }
 
 @media (max-width: 480px) {
-  .bg-banner{
-    opacity: .95;
+  .bg-banner {
+    opacity: 0.95;
   }
   .banner img {
     height: 200px;
