--- a/front-end/src/LandPage.css
+++ b/front-end/src/LandPage.css
@@ -1,6 +1,15 @@
 .container-landpage {
   width: 60rem;
-  margin: 3.75rem auto 0 auto;
+  margin: 1.75rem auto 0 auto;
+}
+
+@keyframes bgSmooth {
+  0% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 100% 0%;
+  }
 }
 
 .bg-landpage {
@@ -8,16 +17,29 @@
   padding-top: 2.5rem;
   width: 100%;
   margin: 0 auto;
-  animation: bgSmooth 2s infinite alternate;
+  background: linear-gradient(
+    240deg,
+    rgba(240, 240, 240, 1),
+    rgba(26, 199, 26, 0.3),
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 1)
+  );
+  background-size: 1200% 1200%;
+  animation: bgSmooth 1s ease forwards;
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 60, 0, 0.3);
 }
 
-@keyframes bgSmooth {
-  from {
-    box-shadow: inset 0px 0px 100px rgba(0, 0, 0, .1);
-  }
-  to {
-    box-shadow: inset 0px -100px 100px rgba(0, 0, 0, .1);
-  }
+.bg-landpage::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  z-index: -1;
+  filter: blur(15px);
 }
 
 /* pseudo quotes */
@@ -28,11 +50,15 @@
   width: 26.25rem;
   color: #737272;
   margin: 0 auto;
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  margin-top: 6.5rem;
+  margin-bottom: 6.5rem;
   position: relative;
   padding: 1.875rem;
-  background: radial-gradient(80% 60% at 50% 50%, rgba(222, 255, 216, 0.2) 0%, rgba(217, 217, 217, 0) 100%);
+  background: radial-gradient(
+    80% 60% at 50% 50%,
+    rgba(222, 255, 216, 0.2) 0%,
+    rgba(217, 217, 217, 0) 100%
+  );
 }
 
 .pseudoquote-landpage::after,
@@ -40,7 +66,12 @@
   content: '';
   width: 9.375rem;
   height: 0.063rem;
-  background: linear-gradient(90deg, rgba(0, 255, 0, 0) 0%, #00FF00 51.35%, rgba(0, 255, 0, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 255, 0, 0) 0%,
+    #00ff00 51.35%,
+    rgba(0, 255, 0, 0) 100%
+  );
   position: absolute;
 }
 
@@ -58,20 +89,37 @@
 .landpage-gato {
   display: flex;
   margin: 0 auto;
-  justify-content: center;
+  justify-content: space-around;
   position: relative;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .landpage-gato::before {
   content: '';
   position: absolute;
-  background: linear-gradient(180deg, rgba(16, 121, 16, 0.6) 21.54%, rgba(16, 121, 16, 0) 70%);
+  background: linear-gradient(
+    180deg,
+    rgba(16, 121, 16, 0.6) 21.54%,
+    rgba(16, 121, 16, 0) 70%
+  );
   width: 37.5rem;
   height: 12.5rem;
-  left: 6.25rem;
+  left: 2.25rem;
   top: 5rem;
   border-radius: 50%;
   z-index: 1;
+  animation: fadeIn 2s ease forwards;
 }
 
 .landpage-gato img {
@@ -80,20 +128,59 @@
   z-index: 2;
 }
 
-.landpage-gato p {
+.landpage-call {
+  height: auto;
+  width: auto;
+  position: relative;
+}
+
+/* Left paw */
+.landpage-call::before {
+  content: '';
+  top: 60px;
+  left: -170px;
+  height: 33px;
+  width: 30px;
+  position: absolute;
+  z-index: -1;
+  background: url('img/svg/logo-icon.svg');
+  opacity: 0.3;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: leftPaw 10s ease-out infinite;
+}
+
+/* Right paw */
+.landpage-call::after {
+  content: '';
+  top: 60px;
+  left: -90px;
+  height: 33px;
+  width: 30px;
+  position: absolute;
+  z-index: -1;
+  background: url('img/svg/logo-icon.svg');
+  opacity: 0.3;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: rightPaw 10s ease-out infinite;
+}
+
+.landpage-call p {
   flex: 1;
-  width: 10.625rem;
-  color: #4E4E4E;
-  font-size: 0.75rem;
+  width: 11.625rem;
+  color: rgba(60, 60, 60, 0.8);
+  font-size: 1rem;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 1rem;
+  line-height: 1.6rem;
+  text-align: center;
 }
 
-.landpage-gato button {
-  margin-left: 3.75rem;
+.landpage-call button {
+  margin-left: 24px;
 }
 
-@media(min-width: 1240px) {
+@media (min-width: 1240px) {
   .container-landpage {
     width: 77.5rem;
   }
@@ -105,7 +192,7 @@
   .pseudoquote-landpage::after,
   .pseudoquote-landpage::before {
     width: 16rem;
-    height: 0.10rem;
+    height: 0.1rem;
   }
   .pseudoquote-landpage::before {
     top: 0.5rem;
