inserting usercontext to make login works

--- a/front-end/src/Footer.css
+++ b/front-end/src/Footer.css
@@ -1,5 +1,7 @@
 .bg-footer {
   background-color: #0f0f0f;
+  position: relative;
+  bottom: 0;
 }
 
 .container-footer {
@@ -41,7 +43,7 @@
   margin-top: 12px;
   display: flex;
   justify-content: space-between;
-  max-width: 160px ;
+  max-width: 160px;
 }
 
 .redes-sociais img {
