--- a/front-end/src/pages/login/Login.css
+++ b/front-end/src/pages/login/Login.css
@@ -1,14 +1,28 @@
 .login-bg-content {
   max-width: 360px;
-  margin: 120px auto;
+  margin: 200px auto;
   padding: 20px 40px 20px 40px;
-  background: linear-gradient(180deg, rgba(237, 236, 236, 0.77) 0.01%, rgba(213, 213, 213, 0.7) 0.02%, rgba(225, 225, 225, 0.5) 0.03%, #FFFFFF 48.75%, rgba(255, 255, 255, 0.4) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(237, 236, 236, 0.77) 0.01%,
+    rgba(213, 213, 213, 0.7) 0.02%,
+    rgba(225, 225, 225, 0.5) 0.03%,
+    #ffffff 48.75%,
+    rgba(255, 255, 255, 0.4) 100%
+  );
   box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
 }
 
 .login-bg-content:hover {
-  background: linear-gradient(180deg, rgba(237, 236, 236, 0.87) 0.01%, rgba(213, 213, 213, 0.78) 0.02%, rgba(225, 225, 225, 0.56) 0.03%, #FFFFFF 48.75%, rgba(255, 255, 255, 0.48) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(237, 236, 236, 0.87) 0.01%,
+    rgba(213, 213, 213, 0.78) 0.02%,
+    rgba(225, 225, 225, 0.56) 0.03%,
+    #ffffff 48.75%,
+    rgba(255, 255, 255, 0.48) 100%
+  );
   box-shadow: 1px 1px 16px rgba(200, 200, 200, 1);
 }
 
@@ -37,25 +51,25 @@
   width: 100%;
 }
 
-.login-grid input{
+.login-grid input {
   border: 1px solid #107910;
   border-radius: 4px;
-  background-color: rgba(16, 121, 16, .05);
+  background-color: rgba(16, 121, 16, 0.05);
   resize: none;
   padding: 8px;
   width: 100%;
   transition: 0.3s ease;
 }
 
-.login-grid input:focus{
+.login-grid input:focus {
   outline: none;
-  border: 1px solid #00CA00;
-  box-shadow: 0px 0px 4px rgba(0, 202, 0, .8);
+  border: 1px solid #00ca00;
+  box-shadow: 0px 0px 4px rgba(0, 202, 0, 0.8);
 }
 
-.login-grid input:hover{
-  border: 1px solid #00CA00;
-  box-shadow: 0px 0px 4px rgba(0, 202, 0, .8);
+.login-grid input:hover {
+  border: 1px solid #00ca00;
+  box-shadow: 0px 0px 4px rgba(0, 202, 0, 0.8);
 }
 
 .login-registrar-recuperar {
