--- a/front-end/src/Navbar.css
+++ b/front-end/src/Navbar.css
@@ -5,7 +5,7 @@ html {
 .bg-navbar {
   width: 100%;
   margin: 0 auto;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, .15);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   z-index: 3;
   position: fixed;
   background-color: #ffffff;
@@ -29,19 +29,20 @@ html {
   display: block;
   width: 100%;
   margin-left: 36px;
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   object-fit: cover;
   object-position: center;
 }
 
 .logo:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .navbar-menu {
   display: flex;
   margin-right: 20px;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .navbar-menu li a {
@@ -64,7 +65,7 @@ html {
 
 .navbar-menu li a::after,
 .navbar-menu li a::before {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   border: 0px solid transparent;
@@ -96,6 +97,11 @@ html {
   width: 15%;
   height: 30%;
   border-color: #107910;
+}
+
+.navbar-menu li::before:last-child,
+.navbar-menu li::after:last-child {
+  border: none;
 }
 
 .navbar-menu li a.active {
