--- a/front-end/src/global/Btn.css
+++ b/front-end/src/global/Btn.css
@@ -1,23 +1,42 @@
 .btn {
   border: none;
   border-radius: 4px;
-  background-color:  rgba(16, 121, 16, 1);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .7);
+  background-color: rgba(16, 121, 16, 1);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
   color: #ffffff;
   cursor: pointer;
   font-weight: 300;
   margin: 10px 0px;
-  transition: .4s ease-in-out;
+  transition: 0.4s ease-in-out;
   position: relative;
   z-index: 1;
 }
 
 .btn:hover {
   background: url('../img/svg/logo-icon.svg');
-  background-color:  rgba(16, 200, 16, .2);
+  background-color: rgba(16, 200, 16, 0.2);
   background-position: center;
   background-repeat: no-repeat;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, .6);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
   color: #ffffff;
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
+
+.btnForm:hover {
+  background: none;
+  background-color: rgba(16, 180, 16, 1);
+}
+
+.btnForm:disabled {
+  opacity: 0.5;
+  cursor: wait;
+}
+
+.btnUser {
+  padding: 0 !important;
+}
+
+.btnUser::before,
+.btnUser::after {
+  border: none !important;
 }
