make some improvements in info page design and fixing btn component

--- a/front-end/src/pages/index/Avaliacao.css
+++ b/front-end/src/pages/index/Avaliacao.css
@@ -53,6 +53,11 @@
 
 .subgrid-avaliacao img:hover {
   width: 360px;
+  transform: rotate(-10deg);
+}
+
+.lado-direito.subgrid-avaliacao img:hover {
+  transform: rotate(10deg);
 }
 
 .subgrid-avaliacao p {
