--- a/front-end/src/pages/info/Info.css
+++ b/front-end/src/pages/info/Info.css
@@ -25,13 +25,20 @@
 
 .grid-rastreio p {
   grid-column: 1 / -1;
-  font-size: 24px;
+  font-size: 20px;
   color: #676767;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .info-img {
   position: relative;
+  transition: 0.5s ease;
+}
+
+.info-img:hover {
+  filter: drop-shadow(0px 4px 0.5rem rgba(30, 30, 30, 1));
+  opacity: 0.93;
 }
 
 .info-img img {
@@ -45,6 +52,7 @@
   text-transform: uppercase;
   font-size: 24px;
   position: absolute;
+  pointer-events: none;
   width: 98%;
   height: 0rem;
   top: 241px;
@@ -292,6 +300,10 @@
 .info-internalgrid {
   display: grid;
   grid-template-columns: 1fr;
+}
+
+.info-internalgrid a {
+  justify-self: center;
 }
 
 .info-internalgrid button {
